Make label addition idempotent
